--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -3,6 +3,7 @@
         <div class="card">
             <figure class="figure">
                 <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                <h3>Versace</h3>
                 <figcaption class="figure-caption mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et facilis possimus excepturi. Autem optio distinctio illo labore commodi temporibus. Corrupti consequatur inventore quo perspiciatis unde repellat omnis natus quaerat tempora?</figcaption>
                 <div class="d-flex justify-content-between">
                     <div class="price p-2">$15</div>
@@ -17,6 +18,7 @@
         <div class="card">
             <figure class="figure">
                 <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                <h3>Versace</h3>
                 <figcaption class="figure-caption mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et facilis possimus excepturi. Autem optio distinctio illo labore commodi temporibus. Corrupti consequatur inventore quo perspiciatis unde repellat omnis natus quaerat tempora?</figcaption>
                 <div class="d-flex justify-content-between">
                     <div class="price p-2">$15</div>
@@ -31,6 +33,7 @@
         <div class="card">
             <figure class="figure">
                 <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                <h3>Versace</h3>
                 <figcaption class="figure-caption mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et facilis possimus excepturi. Autem optio distinctio illo labore commodi temporibus. Corrupti consequatur inventore quo perspiciatis unde repellat omnis natus quaerat tempora?</figcaption>
                 <div class="d-flex justify-content-between">
                     <div class="price p-2">$15</div>
@@ -45,6 +48,7 @@
         <div class="card">
             <figure class="figure">
                 <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                <h3>Versace</h3>
                 <figcaption class="figure-caption mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et facilis possimus excepturi. Autem optio distinctio illo labore commodi temporibus. Corrupti consequatur inventore quo perspiciatis unde repellat omnis natus quaerat tempora?</figcaption>
                 <div class="d-flex justify-content-between">
                     <div class="price p-2">$15</div>
