--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,12 +1,13 @@
 <div class="row">
+    {{#each myproducts}}
     <div class="col-sm-6 col-md-3 mt-4">
         <div class="card">
             <figure class="figure">
-                <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                <h3>Versace</h3>
-                <figcaption class="figure-caption mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et facilis possimus excepturi. Autem optio distinctio illo labore commodi temporibus. Corrupti consequatur inventore quo perspiciatis unde repellat omnis natus quaerat tempora?</figcaption>
+                <img src="{{imgPath}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                <h3>{{title}}</h3>
+                <figcaption class="figure-caption mb-2">{{description}}</figcaption>
                 <div class="d-flex justify-content-between">
-                    <div class="price p-2">$15</div>
+                    <div class="price p-2">${{price}}</div>
                     <div class="add-btn">
                         <button class="btn btn-default">add to cart</button>
                     </div>
@@ -14,49 +15,5 @@
             </figure>
         </div>
     </div> 
-    <div class="col-sm-6 col-md-3 mt-4">
-        <div class="card">
-            <figure class="figure">
-                <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                <h3>Versace</h3>
-                <figcaption class="figure-caption mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et facilis possimus excepturi. Autem optio distinctio illo labore commodi temporibus. Corrupti consequatur inventore quo perspiciatis unde repellat omnis natus quaerat tempora?</figcaption>
-                <div class="d-flex justify-content-between">
-                    <div class="price p-2">$15</div>
-                    <div class="add-btn">
-                        <button class="btn btn-default">add to cart</button>
-                    </div>
-                </div>
-            </figure>
-        </div>
-    </div> 
-    <div class="col-sm-6 col-md-3 mt-4">
-        <div class="card">
-            <figure class="figure">
-                <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                <h3>Versace</h3>
-                <figcaption class="figure-caption mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et facilis possimus excepturi. Autem optio distinctio illo labore commodi temporibus. Corrupti consequatur inventore quo perspiciatis unde repellat omnis natus quaerat tempora?</figcaption>
-                <div class="d-flex justify-content-between">
-                    <div class="price p-2">$15</div>
-                    <div class="add-btn">
-                        <button class="btn btn-default">add to cart</button>
-                    </div>
-                </div>
-            </figure>
-        </div>
-    </div> 
-    <div class="col-sm-6 col-md-3 mt-4">
-        <div class="card">
-            <figure class="figure">
-                <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                <h3>Versace</h3>
-                <figcaption class="figure-caption mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et facilis possimus excepturi. Autem optio distinctio illo labore commodi temporibus. Corrupti consequatur inventore quo perspiciatis unde repellat omnis natus quaerat tempora?</figcaption>
-                <div class="d-flex justify-content-between">
-                    <div class="price p-2">$15</div>
-                    <div class="add-btn">
-                        <button class="btn btn-default">add to cart</button>
-                    </div>
-                </div>
-            </figure>
-        </div>
-    </div> 
+    {{/each}}
 </div>
