--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,6 +1,15 @@
 <div class="row">
     <div class="col-md-4 mx-auto">
         <h3>Sign Up</h3>
+        {{#if hasError}}
+            <div class="alert alert-danger">
+                {{#each message}}
+                <p>
+                    {{this}}
+                </p>
+                {{/each}}
+            </div>
+        {{/if}}
         <form action="/user/signup" method="POST">
             <div class="formgroup">
                 <label for="email">Enter Email</label>
@@ -10,7 +19,7 @@
                 <label for="password">Enter Password</label>
                 <input type="password" class="form-control" id="password" name="password">
             </div>
-            {{!-- <input type="hidden" name="_csrf" value="{{csrfToken}}"> --}}
+            <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <button type="submit" class="btn btn-success mt-2">
                 Sign Up
             </button>    
