validation added to sign up route

--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -10,10 +10,11 @@
                 {{/each}}
             </div>
         {{/if}}
+        
         <form action="/user/signup" method="POST">
             <div class="formgroup">
                 <label for="email">Enter Email</label>
-                <input type="email" class="form-control" id="email" name="email">
+                <input type="text" class="form-control" id="email" name="email">
             </div>
             <div class="formgroup">
                 <label for="password">Enter Password</label>
