--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,10 +18,14 @@
             <i class="fa fa-user" aria-hidden="true"></i>UserAccount
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            {{#if login}}
+              <li><a class="dropdown-item" href="/user/profile">Profile</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
+            {{else}}  
+              <li><a class="dropdown-item" href="/user/signup">Sign Up</a></li>
+              <li><a class="dropdown-item" href="/user/signin">Sign In</a></li>
+            {{/if}}
           </ul>
         </li>
       </ul>
