cart model added

--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -9,7 +9,7 @@
                 <div class="d-flex justify-content-between">
                     <div class="price p-2">${{price}}</div>
                     <div class="add-btn">
-                        <button class="btn btn-default">add to cart</button>
+                        <a href="/add-to-cart/{{_id}}" class="btn btn-default">add to cart</button>
                     </div>
                 </div>
             </figure>
