cart view added

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -9,9 +9,9 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
            <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Shopping Cart</a>
+          <a class="nav-link" href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Shopping Cart <span class="badge badge-info">{{session.cart.totalQty}}</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
