checkout page added

--- a/views/shop/cart.hbs
+++ b/views/shop/cart.hbs
@@ -27,7 +27,7 @@
         {{/each}}
          <div class="d-flex justify-content-around mt-4">
             <p>Total Price: {{totalPrice}}</p>
-            <button class="btn btn-success">checkout</button>
+            <a href="/checkout" type="button" class="btn btn-success">checkout</a>
         </div>
         {{else}}
             <div class="message">
