--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -12,31 +12,31 @@
                     <label for="name">
                         Name
                     </label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" required>
                 </div>
                  <div class="form-group">
                     <label for="email">
                         Email
                     </label>
-                    <input type="email" class="form-control" id="email">
+                    <input type="email" class="form-control" id="email" required>
                 </div>
                 <div class="form-group">
                     <label for="address">
                         Address
                     </label>
-                    <input type="text" class="form-control" id="address">
+                    <input type="text" class="form-control" id="address" required>
                 </div>
                 <div class="form-group">
                     <label for="card-name">
                         Card Name
                     </label>
-                    <input type="text" class="form-control" id="card-name">
+                    <input type="text" class="form-control" id="card-name" required>
                 </div>
                 <div class="form-group">
                     <label for="card-no">
                         Card Number
                     </label>
-                    <input type="text" class="form-control" id="card-no">
+                    <input type="text" class="form-control" id="card-no" required>
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
@@ -44,7 +44,7 @@
                             <label for="ex-month">
                                 Expiry Month
                             </label>
-                            <input type="text" class="form-control" id="ex-month">
+                            <input type="text" class="form-control" id="ex-month" required>
                         </div>
                     </div>
                     <div class="col-sm-6">
@@ -52,7 +52,7 @@
                             <label for="ex-year">
                                 Expiry Year
                             </label>
-                            <input type="text" class="form-control" id="ex-year">
+                            <input type="text" class="form-control" id="ex-year" required>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                     <label for="cvc">
                         CVC
                     </label>
-                    <input type="text" class="form-control" id="cvc">
+                    <input type="text" class="form-control" id="cvc" required>
                 </div>
                 <div class="button">
                     <button class="btn btn-success">Check Out</button>
